fixed dropdowns in dark mode

--- a/src/components/Dropdown/styles.css
+++ b/src/components/Dropdown/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: .5vw 0;
+    background-color: transparent;
 }
 
 .dropdown-label {
